--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <style>
 .section-fist-task {
     display: flex;
-    position: relative;
+    position: relative;/**found an error in the  position:static; and replaced it with position:relative;**/
     margin: 0;
     padding: 0;
-    justify-content: center;
-    
+    justify-content: center; /** added for similarity with the example on the imaged **/
     background-color: rgb(200, 200, 200);
+    padding:70px; /** added for similarity with the example on the imaged **/
 }
 .section-fist-task-red-block {
-    position: static;
+    position: static;/**found an error in the  position:relative; and replaced it with position:static;(It is not necessary to enter in the code)**/
     background-color: red;
     width: 250px;
     height: 250px;
@@ -24,12 +24,14 @@
     margin-left: 29px;
 }
 .section-fist-task-green-block {
-    position: static;
+    position: static;/**found an error in the  position:fixed; and replaced it with position:static;(It is not necessary to enter in the code)**/
     background-color: green;
     width: 250px;
     height: 250px;
     margin-right: 29px;
 }
+
+
 </style>
 <body>
     
