--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@ body{
     display: flex;
     position: relative;/**found an error in the  position:static; and replaced it with position:relative;**/
     margin: 0;
-    background-color: rgb(200, 200, 200);
+    padding: 0;
     height: auto;
 }
 .section-fist-task-red-block {
-    position: absolute;/**found an error in the  position:relative; and replaced it with position:static;(It is not necessary to enter in the code)**/
+    position: absolute;/**found an error in the  position:relative; and replaced it with position:absolute;**/
     background-color: red;
     width: 250px;
     height: 250px;
@@ -26,7 +26,7 @@ body{
     top: 141px ;
 }
 .section-fist-task-green-block {
-    position: absolute;/**found an error in the  position:fixed; and replaced it with position:static;(It is not necessary to enter in the code)**/
+    position: absolute;/**found an error in the  position:fixed; and replaced it with position:absolute;**/
     background-color: green;
     width: 250px;
     height: 250px;
