--- a/index.html
+++ b/index.html
@@ -1,72 +1,214 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@1,300;1,400&display=swap" rel="stylesheet">    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web - design</title>
 </head>
 <style>
 body{
+    background: linear-gradient(rgba(0, 0, 0, 0.616),rgba(0, 0, 0, 0.608)), url(fone2.jpg);
+    background-size: cover;
+    background-attachment: fixed;
     margin: 0;
 }
+a{
+    text-decoration: none;
+}
+.header-text{
+    text-decoration: none;
+    font-family: 'Titillium Web', sans-serif;
+    text-align: center;
+    font-size:40px;
+    padding-top: 30px;
+    font-weight:bold;
+    color: black;
+    height: 70px;
+    width: 100%;
 
-.section-fist-task {
+}
+.header-text:hover {
+    background:linear-gradient( blue 50%,yellow 50%);
+    transition: .6s;
+}
+
+header{
+    height: 100px;
+    background-color:rgba(255, 255, 255, 0.479);
+    display: block;
+}
+
+footer{
+    position: relative;
+    font-family: 'Titillium Web', sans-serif;
+    clear: both;
+    background-color: rgba(0, 0, 0, 0.311);
+    color: white;
+    height: 140px;
     display: flex;
-    position: relative;/**found an error in the  position:static; and replaced it with position:relative;**/
-    margin: 0;
-    padding: 0;
-    height: auto;
-}
-.section-fist-task-red-block {
-    position: absolute;/**found an error in the  position:relative; and replaced it with position:absolute;**/
-    background-color: red;
-    width: 250px;
-    height: 250px;
-    left: 367px;
-    top: 141px ;
-}
-.section-fist-task-green-block {
-    position: absolute;/**found an error in the  position:fixed; and replaced it with position:absolute;**/
-    background-color: green;
-    width: 250px;
-    height: 250px;
-    right: 397px;
-    top: 141px;
+    bottom: 0;
+    left:0;
 }
 
-/**
-.section-fist-task {
-display: flex;
-position: static;
-margin: 0;
-padding: 0;
+.menu{
+    width: 15%;
+    height: 800px;
+    background:linear-gradient( rgba(0, 191, 255, 0.33),rgba(0, 191, 255, 0.09),#7cb3ff00) ;
+    float: left;
+    font-family: 'Barlow', sans-serif;
+    color: white;
 }
-.section-fist-task-red-block {
-position: relative;
-background-color: red;
-width: 250px;
-height: 250px;
-margin-left: 367px;
-margin-top: 141px ;
-}
-.section-fist-task-green-block {
-position: fixed;
-background-color: green;
-width: 250px;
-height: 250px;
-margin-right: 397px;
-margin-top: 141px;
-}
-**/
 
+.content{
+    width: 85%;
+    height: 100%;
+    float: left;    
+    font-family: 'Barlow', sans-serif;
+    color: white;
+}
+p{
+    text-indent: 20px;
+}
+.content p{
+    font-size:18px ;
+}
+
+button{
+    width: 150px auto;
+    height: 60px ;
+    font-size: 25px;
+    padding: 10px;
+    background-color: rgba(0, 255, 255, 0);
+    border: .5px solid rgba(0, 255, 64, 0);
+    margin: 0 auto;
+    display: block;
+    color:rgb(255, 255, 255);
+    font-weight: bold;
+    border-radius: 5px;
+    background-color:  rgba(0, 255, 187, 0.33) ; 
+    margin-bottom: 80px;
+    box-shadow: 2px 2px 6px rgba(255, 255, 255, 0.487);
+}
+button:hover{
+    background-color:  rgba(0, 255, 106, 0.575)  ;
+    transition: .2s;
+    box-shadow: 0px 0px 1px rgba(255, 255, 255, 0.487);
+
+}
+.nav a{
+    font-size:15px ;
+    font-family: 'Fira Sans', sans-serif;
+    color: white;
+}
+
+.nav a:hover{
+    text-decoration:underline 1px solid rgb(13, 255, 0);
+    transition: .7s;
+
+}
+
+.video{
+    margin: 0 auto;
+    display: block;
+    text-align: center;
+}
+
+
+.social {display: inline-block;}
+.social a {
+	display:block;
+	width: 48px;
+	height: 48px;
+	margin: 0 10px 10px 0 ;
+	text-align: center;
+	color: #000;
+	background: #fff;
+	border: 1px solid #ccc;
+	border-radius: 24px;
+	box-shadow: 0 2px 4px rgba(0,0,0,0.15), inset 0 0 50px rgba(0,0,0,0.1);
+}
+
+.social a:hover {color: #fff;}
+.social svg {
+	margin-top: 7px;
+	width: 32px;
+	height: 32px;
+}
+.facebook a:hover {background: #3b5998;}
+.instagram a:hover {background: #ff0062;}
+.twitter a:hover {background: #00acee;}
+.youtube a:hover {background: #c4302b;}
+
+.soc{
+    margin-top: 40px;
+}
 
 </style>
 <body>
-    
-    <section class="section-fist-task">
-        <div class="section-fist-task-red-block"></div>
-        <div class="section-fist-task-green-block"></div>
-    </section>
 
+<header>
+    <a href="index.html"><div class="header-text">Practical tasks of Nazar Pauk</div></a>
+</header>
+    <div class="menu">
+<h2 style="margin-left: 10px; background-color: rgba(0, 0, 0, 0.17);">Menu</h2>
+        <marquee style="background-color: rgb(0, 255, 102); color: white; font-size: 10px; color: black;"><b>N A V I G A T I O N !!!</b></marquee>
+        <ul class="nav">
+            <li><a href="#position">Position</a></li>
+        </ul>
+
+    </div>
+    <main class="content">
+            <h2 style="margin-left: 40px; font-weight: 700; "><span style="color: orange;" >My </span>tasks</h2>
+
+        <h3 style="text-align:center; color: rgb(60, 255, 0);"><a name="position">Position</a></h3>
+            <p style="margin: 15px;  font-family: 'Ubuntu', sans-serif;"> watched the <a href="https://youtu.be/mpykT40_VBc">video</a> in this lesson, we can learn about such CЅЅ positioning properties as position, top, left, right, bottom and z-index. Let's get acquainted with position static, position relative, position absolute, position fixed and position sticky: </p>
+        <form  action="Example/position/index.html" target="_blank"> 
+            <button>Example</button>
+        </form>  
+
+        <h3 style="text-align:center; color: rgb(60, 255, 0);"><a name="position">Flexbox</a></h3>
+            <p style="margin: 15px;  font-family: 'Ubuntu', sans-serif;"> watched the <a href="https://youtu.be/mpykT40_VBc">video</a> here is a video in which propose to complete a practical task. I rewrite site from the video</p>
+        <form  action="Example/flexbox/index.html" target="_blank"> 
+            <button>Example</button>
+        </form>  
+
+        
+    </main>
+
+    <footer>
+        <h1 style="margin-right: 100px; margin-top: 50px;"><a style="color: orange; margin-left: 400px;">My</a> contacts</h1>
+    <div class="soc">
+        <div class="social facebook">
+            <a href="https://www.facebook.com/nazar.pauk.9" target="_blank">
+                <svg role="img" viewBox="0 0 320 512">
+                    <path fill="currentColor" d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"/>
+                </svg>
+            </a>
+        </div>
+        <div class="social instagram">
+            <a href="https://www.instagram.com/_nazar_pauk_/" target="_blank">
+                <svg role="img" viewBox="0 0 448 512">
+                    <path fill="currentColor" d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/>
+                </svg>
+            </a>
+        </div>
+        <div class="social twitter">
+            <a href="https://twitter.com/_Nazar_Pauk_" target="_blank">
+                <svg role="img" viewBox="0 0 512 512">
+                    <path fill="currentColor" d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"/>
+                </svg>
+            </a>
+        </div>
+        <div class="social youtube">
+            <a href="#" target="_blank">
+                <svg role="img" viewBox="0 0 576 512">
+                    <path fill="currentColor" d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"/>
+                </svg>
+            </a>
+        </div>
+    </div>
+    </footer>
 </body>
 </html>
