--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ button:hover{
         </form>  
 
         <h3 style="text-align:center; color: rgb(60, 255, 0);"><a name="position">Flexbox</a></h3>
-            <p style="margin: 15px;  font-family: 'Ubuntu', sans-serif;"> watched the <a href="https://youtu.be/mpykT40_VBc">video</a> here is a video in which propose to complete a practical task. I rewrite site from the video</p>
+            <p style="margin: 15px;  font-family: 'Ubuntu', sans-serif;">In this <a href="https://youtu.be/mpykT40_VBc">video</a>, I got acquainted with the topic of fexbox and completed the practical task indicated in it</p>
         <form  action="Example/flexbox/index.html" target="_blank"> 
             <button>Example</button>
         </form>  
