--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@ button:hover{
         <marquee style="background-color: rgb(0, 255, 102); color: white; font-size: 10px; color: black;"><b>N A V I G A T I O N !!!</b></marquee>
         <ul class="nav">
             <li><a href="#position">Position</a></li>
+            <li><a href="#flexbox">Flexbox</a></li>
+
         </ul>
 
     </div>
@@ -168,7 +170,7 @@ button:hover{
             <button>Example</button>
         </form>  
 
-        <h3 style="text-align:center; color: rgb(60, 255, 0);"><a name="position">Flexbox</a></h3>
+        <h3 style="text-align:center; color: rgb(60, 255, 0);"><a name="flexbox">Flexbox</a></h3>
             <p style="margin: 15px;  font-family: 'Ubuntu', sans-serif;">In this <a href="https://youtu.be/mpykT40_VBc">video</a>, I got acquainted with the topic of fexbox and completed the practical task indicated in it</p>
         <form  action="Example/flexbox/index.html" target="_blank"> 
             <button>Example</button>
