--- a/index.html
+++ b/index.html
@@ -157,6 +157,8 @@ button:hover{
         <ul class="nav">
             <li><a href="#position">Position</a></li>
             <li><a href="#flexbox">Flexbox</a></li>
+            <li><a href="#grids">Grids</a></li>
+
 
         </ul>
 
@@ -173,6 +175,12 @@ button:hover{
         <h3 style="text-align:center; color: rgb(60, 255, 0);"><a name="flexbox">Flexbox</a></h3>
             <p style="margin: 15px;  font-family: 'Ubuntu', sans-serif;">In this <a href="https://youtu.be/mpykT40_VBc">video</a>, I got acquainted with the topic of fexbox and completed the practical task indicated in it</p>
         <form  action="Example/flexbox/index.html" target="_blank"> 
+            <button>Example</button>
+        </form>  
+
+        <h3 style="text-align:center; color: rgb(60, 255, 0);"><a name="grids">Grids</a></h3>
+        <p style="margin: 15px;  font-family: 'Ubuntu', sans-serif;">In this <a href="https://youtu.be/yWVJgnTpdUA">video</a>, I got acquainted with the topic of grids and completed the practical task indicated in it</p>
+        <form  action="Example/grids/index.html" target="_blank"> 
             <button>Example</button>
         </form>  
 
