--- a/index.html
+++ b/index.html
@@ -184,6 +184,13 @@ button:hover{
             <button>Example</button>
         </form>  
 
+        <h3 style="text-align:center; color: rgb(60, 255, 0);"><a name="grids">Forms</a></h3>
+        <p style="margin: 15px;  font-family: 'Ubuntu', sans-serif;">In this <a href="https://www.youtube.com/watch?v=ZYPBTvjZl7M">video</a>, I got acquainted with the topic of grids and completed the practical task indicated in it</p>
+        <form  action="Example/forms/index.html" target="_blank"> 
+            <button>Example</button>
+        </form>  
+
+
         
     </main>
 
