--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@ button:hover{
             <li><a href="#position">Position</a></li>
             <li><a href="#flexbox">Flexbox</a></li>
             <li><a href="#grids">Grids</a></li>
+            <li><a href="#forms">Forms</a></li>
+            <li><a href="#svg">SVG</a></li>
+
 
 
         </ul>
@@ -184,11 +187,18 @@ button:hover{
             <button>Example</button>
         </form>  
 
-        <h3 style="text-align:center; color: rgb(60, 255, 0);"><a name="grids">Forms</a></h3>
+        <h3 style="text-align:center; color: rgb(60, 255, 0);"><a name="forms">Forms</a></h3>
         <p style="margin: 15px;  font-family: 'Ubuntu', sans-serif;">In this <a href="https://www.youtube.com/watch?v=ZYPBTvjZl7M">video</a>, I got acquainted with the topic of grids and completed the practical task indicated in it</p>
         <form  action="Example/forms/index.html" target="_blank"> 
             <button>Example</button>
         </form>  
+
+        <h3 style="text-align:center; color: rgb(60, 255, 0);"><a name="svg">SVG</a></h3>
+        <p style="margin: 15px;  font-family: 'Ubuntu', sans-serif;">Source of information <a href="https://www.youtube.com/watch?v=Yzj8bBCq7Eg">video</a>, I got acquainted with the topic of grids and completed the practical task indicated in it</p>
+        <form  action="Example/svg/index.html" target="_blank"> 
+            <button>Example</button>
+        </form>  
+
 
 
         
